@@ -105,6 +105,7 @@ Distribution Fitting
  binolike
  bisafit
  bisalike
+ burrlike
  evfit
  evlike
  expfit
